RHD-708 - Fixed the alignment issue

--- a/stylesheets/_faq.scss
+++ b/stylesheets/_faq.scss
@@ -29,6 +29,10 @@
 }
 
 .faq {
+  .align {
+    float: right !important;
+  }
+
   h3 {
     border-bottom: 1px solid $grey-3;
     margin-bottom: 20px;
